bindings/python/tilengine.py


def LoadTileset(filename):
	handle = _tln.TLN_LoadTileset(_encode_string(filename))
	if handle != None:
		return Tileset(handle)
	else:
		return None
		
class Tileset:
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.palette = Palette(_tln.TLN_GetTilesetPalette(handle))
		self.tile_width = _tln.TLN_GetTileWidth(handle)
		self.tile_height = _tln.TLN_GetTileHeight(handle)	

	def Clone(self):
		handle = _tln.TLN_CloneTileset(self)
		if handle != None:
			return Tileset(handle)
		else:
			return None

	def SetPixels(self, entry, data, pitch):
		return _tln.TLN_SetTilesetPixels(self, entry, data, pitch)

	def CopyTile(self, source, destination):
		return _tln.TLN_CopyTile(self, source, destination)

	def Delete(self):
		return _tln.TLN_DeleteTileset(self)

# tilemaps management ---------------------------------------------------------
_tln.TLN_CreateTilemap.argtypes = [c_int, c_int, POINTER(Tile)]
_tln.TLN_CreateTilemap.restype = c_void_p
_tln.TLN_LoadTilemap.argtypes = [c_char_p]
_tln.TLN_LoadTilemap.restype = c_void_p
_tln.TLN_CloneTilemap.argtypes = [c_void_p]
_tln.TLN_CloneTilemap.restype = c_void_p
_tln.TLN_GetTilemapRows.argtypes = [c_void_p]
_tln.TLN_GetTilemapRows.restype = c_int
_tln.TLN_GetTilemapRows.argtypes = [c_void_p]
_tln.TLN_GetTilemapRows.restype = c_int
_tln.TLN_GetTilemapTile.argtypes = [c_void_p, c_int, c_int, POINTER(Tile)]
_tln.TLN_GetTilemapTile.restype = c_bool
_tln.TLN_SetTilemapTile.argtypes = [c_void_p, c_int, c_int, POINTER(Tile)]
_tln.TLN_SetTilemapTile.restype = c_bool
_tln.TLN_CopyTiles.argtypes = [c_void_p, c_int, c_int, c_int, c_int, c_void_p, c_int, c_int]
_tln.TLN_CopyTiles.restype = c_bool
_tln.TLN_DeleteTilemap.argtypes = [c_void_p]
_tln.TLN_DeleteTilemap.restype = c_bool

def CreateTilemap(rows, cols, tiles):
	handle = _tln.TLN_CreateTilemap(rows, cols, tiles)
	if handle != None:
		return Tilemap(handle)
	else:
		return None		

def LoadTilemap(filename, layer_name=None):
	handle = _tln.TLN_LoadTilemap(_encode_string(filename), _encode_string(layer_name))
	if handle != None:
		return Tilemap(handle)
	else:
		return None		

class Tilemap:
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.rows = _tln.TLN_GetTilemapRows(handle)
		self.cols = _tln.TLN_GetTilemapCols(handle)

	def Clone(self):
		handle = _tln.TLN_CloneTilemap(self)
		if handle != None:
			return Tilemap(handle)
		else:
			return None		

	def GetTile(self, entry, tile_info):
		return _tln.TLN_GetTilemapTile(self, entry, tile_info)

	def SetTile(self, entry, tile_info):
		return _tln.TLN_SetTilemapTile(self, entry, tile_info)
		
	def CopyTiles(self, src_row, sr_ccol, num_rows, num_cols, dst_tilemap, dst_row, dst_col):
		return _tln.TLN_CopyTiles(self, src_row, sr_ccol, num_rows, num_cols, dst_tilemap, dst_row, dst_col)

	def Delete(self):
		return _tln.TLN_DeleteTilemap(self)
	
# color tables management -----------------------------------------------------
_tln.TLN_CreatePalette.argtypes = [c_int]
_tln.TLN_CreatePalette.restype = c_void_p
_tln.TLN_LoadPalette.argtypes = [c_char_p]
_tln.TLN_LoadPalette.restype = c_void_p
_tln.TLN_ClonePalette.argtypes = [c_void_p]
_tln.TLN_ClonePalette.restype = c_void_p
_tln.TLN_SetPaletteColor.argtypes = [c_void_p, c_int, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SetPaletteColor.restype = c_bool
_tln.TLN_MixPalettes.argtypes = [c_void_p, c_void_p, c_void_p, c_ubyte]
_tln.TLN_MixPalettes.restype = c_bool
_tln.TLN_AddPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_AddPaletteColor.restype = c_bool
_tln.TLN_SubPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_SubPaletteColor.restype = c_bool
_tln.TLN_ModPaletteColor.argtypes = [c_void_p, c_ubyte, c_ubyte, c_ubyte, c_ubyte, c_ubyte]
_tln.TLN_ModPaletteColor.restype = c_bool
_tln.TLN_GetPaletteData.argtypes = [c_void_p, c_int]
_tln.TLN_GetPaletteData.restype = POINTER(c_ubyte)
_tln.TLN_DeletePalette.argtypes = [c_void_p]
_tln.TLN_DeletePalette.restype = c_bool

def CreatePalette(num_entries):
	handle = _tln.TLN_CreatePalette(num_entries)
	if handle != None:
		return Palette(handle)
	else:
		return None

def LoadPalette(filename):
	handle = _tln.TLN_LoadPalette(_encode_string(filename))
	if handle != None:
		return Palette(handle)
	else:
		return None
		
class Palette:
	def __init__(self, handle):
		self._as_parameter_ = handle
	
	def Clone(self):
		handle = _tln.TLN_ClonePalette(self)
		if handle != None:
			return Palette(handle)
		else:
			return None

	def SetColor(self, entry, r, g, b):
		return _tln.TLN_SetPaletteColor(self, entry, r, g, b)

	def Mix(self, src_palette1, src_palette2, factor):
		return _tln.TLN_MixPalettes(src_palette1, src_palette2, self, factor)

	def AddColor(self, first, count, r, g, b):
		return _tln.TLN_AddPaletteColor(self, first, count, r, g, b)

	def SubColor(self, first, count, r, g, b):
		return _tln.TLN_SubPaletteColor(self, first, count, r, g, b)

	def ModColor(self, first, count, r, g, b):
		return _tln.TLN_ModPaletteColor(self, first, count, r, g, b)
		
	def GetData(self, entry):
		return _tln.TLN_GetPaletteData(self, entry)

	def Delete(self):
		return _tln.TLN_DeletePalette(self)
	
# bitmaps ---------------------------------------------------------------------
_tln.TLN_CreateBitmap.argtypes = [c_int, c_int, c_int]
_tln.TLN_CreateBitmap.restype = c_void_p
_tln.TLN_LoadBitmap.argtypes = [c_char_p]
_tln.TLN_LoadBitmap.restype = c_void_p
_tln.TLN_CloneBitmap.argtypes = [c_void_p]
_tln.TLN_CloneBitmap.restype = c_void_p
_tln.TLN_GetBitmapPtr.argtypes = [c_void_p, c_int, c_int]
_tln.TLN_GetBitmapPtr.restype = POINTER(c_ubyte)
_tln.TLN_GetBitmapWidth.argtypes = [c_void_p]
_tln.TLN_GetBitmapWidth.restype = c_int
_tln.TLN_GetBitmapHeight.argtypes = [c_void_p]
_tln.TLN_GetBitmapHeight.restype = c_int
_tln.TLN_GetBitmapDepth.argtypes = [c_void_p]
_tln.TLN_GetBitmapDepth.restype = c_int
_tln.TLN_GetBitmapPitch.argtypes = [c_void_p]
_tln.TLN_GetBitmapPitch.restype = c_int
_tln.TLN_GetBitmapPalette.argtypes = [c_void_p]
_tln.TLN_GetBitmapPalette.restype = c_void_p
_tln.TLN_DeleteBitmap.argtypes = [c_void_p]
_tln.TLN_DeleteBitmap.restype = c_bool

def CreateBitmap(width, height, bpp):
	handle = _tln.TLN_CreateBitmap(width, height, bpp)
	if handle != None:
		return Bitmap(handle)
	else:
		return None

def LoadBitmap(filename):
	handle = _tln.TLN_LoadBitmap(_encode_string(filename))
	if handle != None:
		return Bitmap(handle)
	else:
		return None
	
class Bitmap:
	def __init__(self, handle):
		self._as_parameter_ = handle
		self.width   = _tln.TLN_GetBitmapWidth(handle)
		self.height  = _tln.TLN_GetBitmapHeight(handle)
		self.depth   = _tln.TLN_GetBitmapDepth(handle)
		self.pitch   = _tln.TLN_GetBitmapPitch(handle)
		self.palette = _tln.TLN_GetBitmapPalette(handle)

	def Clone(bitmap):
		handle = _tln.TLN_CloneBitmap(self)
		if handle != None:
			return Bitmap(handle)
		else:
			return None

	def GetData(self, x, y):
		return _tln.TLN_GetBitmapPtr(self, x, y)

	def Delete(self):
		return _tln.TLN_DeleteBitmap(self)

# sequences management --------------------------------------------------------
_tln.TLN_CreateSequence.argtypes = [c_char_p, c_int, c_int, c_int, POINTER(c_int)]
_tln.TLN_CreateSequence.restype = c_void_p
_tln.TLN_CreateCycle.argtypes = [c_char_p, c_int, POINTER(ColorStrip)]
_tln.TLN_CreateCycle.restype = c_void_p
_tln.TLN_CloneSequence.argtypes = [c_void_p]
_tln.TLN_CloneSequence.restype = c_void_p
_tln.TLN_DeleteSequence.argtypes = [c_void_p]
_tln.TLN_DeleteSequence.restype = c_bool

def CreateSequence(name, delay, first, num_frames, data):
	handle =  _tln.TLN_CreateSequence(_encode_string(name), delay, first, num_frames, data)
	if handle != None:
		return Sequence(handle)
	else:
		return None

def CreateCycle(name, num_strips, strips):
	handle = _tln.TLN_CreateCycle(_encode_string(name), num_strips, strips)
	if handle != None:
		return Sequence(handle)
	else:
		return None

class Sequence:
	def __init__(self, handle):
		self._as_parameter_ = handle

	def Clone(sequence):
		handle = _tln.TLN_CloneSequence(sequence)
		if handle != None:
			return Sequence(handle)
		else:
			return None

	def Delete(sequence):
		return _tln.TLN_DeleteSequence(sequence)

# sequence pack management --------------------------------------------------------
_tln.TLN_CreateSequencePack.restype = c_void_p
_tln.TLN_LoadSequencePack.argtypes = [c_char_p]
_tln.TLN_LoadSequencePack.restype = c_void_p
_tln.TLN_FindSequence.argtypes = [c_void_p, c_char_p]
_tln.TLN_FindSequence.restype = c_void_p
_tln.TLN_AddSequenceToPack.argtypes = [c_void_p, c_void_p]
_tln.TLN_AddSequenceToPack.restype = c_bool
_tln.TLN_DeleteSequencePack.argtypes = [c_void_p]
_tln.TLN_DeleteSequencePack.restype = c_bool

def CreateSequencePack():
	handle = _tln.TLN_CreateSequencePack()
	if handle != None:
		return SequencePack(handle)
	else:
		return None

def LoadSequencePack(filename):
	handle = _tln.TLN_LoadSequencePack(_encode_string(filename))
	if handle != None:
		return SequencePack(handle)
	else:
		return None
	
class SequencePack:

	def __init__(self, handle):
		self._as_parameter_ = handle

	def FindSequence(sequence_pack, name):
		handle = _tln.TLN_FindSequence(sequence_pack, _encode_string(name))
		if (handle != None):
			return Sequence(handle)
		else:
			return None			

	def AddSequence(sequence_pack, sequence):
		return _tln.TLN_AddSequenceToPack(sequence_pack, sequence)

	def Delete(sequence_pack):
		return _tln.TLN_DeleteSequencePack(sequence_pack)

# layer management ------------------------------------------------------------
_tln.TLN_SetLayer.argtypes = [c_int, c_void_p, c_void_p]
_tln.TLN_SetLayer.restype = c_bool
_tln.TLN_SetLayerPalette.argtypes = [c_int, c_void_p]
_tln.TLN_SetLayerPalette.restype = c_bool
_tln.TLN_SetLayerPosition.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetLayerPosition.restype = c_bool
_tln.TLN_SetLayerScaling.argtypes = [c_int, c_float, c_float]
_tln.TLN_SetLayerScaling.restype = c_bool
_tln.TLN_SetLayerAffineTransform.argtypes = [c_int, POINTER(Affine)]
_tln.TLN_SetLayerAffineTransform.restype = c_bool
_tln.TLN_SetLayerTransform.argtypes = [c_int, c_float, c_float, c_float, c_float, c_float]
_tln.TLN_SetLayerTransform.restype = c_bool
_tln.TLN_SetLayerPixelMapping.argtypes = [c_int, POINTER(PixelMap)];
_tln.TLN_SetLayerPixelMapping.restype = c_bool
_tln.TLN_ResetLayerMode.argtypes = [c_int]
_tln.TLN_ResetLayerMode.restype = c_bool
_tln.TLN_SetLayerBlendMode.argtypes = [c_int, c_int, c_ubyte]
_tln.TLN_SetLayerBlendMode.restype = c_bool
_tln.TLN_SetLayerColumnOffset.argtypes = [c_int, POINTER(c_int)]
_tln.TLN_SetLayerColumnOffset.restype = c_bool
_tln.TLN_SetLayerClip.argtypes = [c_int, c_int, c_int, c_int, c_int]
_tln.TLN_SetLayerClip.restype = c_bool
_tln.TLN_DisableLayerClip.argtypes = [c_int]
_tln.TLN_DisableLayerClip.restype = c_bool
_tln.TLN_SetLayerMosaic.argtypes = [c_int, c_int, c_int]
_tln.TLN_SetLayerMosaic.restype = c_bool
_tln.TLN_DisableLayerMosaic.argtypes = [c_int]
_tln.TLN_DisableLayerMosaic.restype = c_bool
_tln.TLN_DisableLayer.argtypes = [c_int]
_tln.TLN_DisableLayer.restype = c_bool
_tln.TLN_GetLayerPalette.argtypes = [c_int]
_tln.TLN_GetLayerPalette.restype = c_void_p
_tln.TLN_GetLayerTile.argtypes = [c_int, c_int, c_int, POINTER(TileInfo)]
_tln.TLN_GetLayerTile.restype = c_bool

class Layer:
	def __init__(self, index):
		self._as_parameter_ = index

	def Setup(self, tileset, tilemap):
		return _tln.TLN_SetLayer(self, tileset, tilemap)
		
	def SetPalette(self, palette):
		return _tln.TLN_SetLayerPalette(self, palette)

	def SetPosition(self, x, y):
		return _tln.TLN_SetLayerPosition(self, int(x), int(y))

	def SetScaling(self, hor_factor, ver_factor):
		return _tln.TLN_SetLayerScaling(self, hor_factor, ver_factor)

	def SetTransform(self, angle, x, y, sx, sy):
		return _tln.TLN_SetLayerTransform(self, angle, x, y, sx, sy)

	def SetPixelMapping(self, pixel_map):
		return _tln.TLN_SetLayerPixelMapping(self, pixel_map)
